editing down technical

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -963,45 +963,33 @@ We can see that the process of changing pen colours on the graphical tool is one
 
 #### Diverse use of technical processes driven by GDPs
 
-MOVED SO EDIT DOWN  
-References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions.
-
-Other examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
-
+IS THIS ADDRESSED ABOVE - A tautology IN TERMS OF USE OF GDP LANGUAGE AS IT IS PRESENTED IN TOOLS.
 In describing this research it is important to avoid overreach when describing the possible utility of GDPs by making a distinction between primary and secondary involvement of GDPS in technical processes.
 
 Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
 
 Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs.
 
-Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the process in more indirect.
+
+References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions.
+
+#### Increasing technical fluidity of general computer use
+
+Not just related to GDPS but perhaps motivated by them. 
+
+eexamples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
+
+
+<!-- Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the process in more indirect. -->
 
 After giving feedback on the jump speed Molly's game Ed sharing a process to redundant space at the edges of design sprite characters.
 
-The following example for the most part covers a the technical process of removing redundant space from around art in graphical editors. However the process becomes much clearer to Molly when linked directly to here experience of a game design pattern of altering the sprites hit box.
+<!-- NOTE - In vignette 4.a.5 -->
 
-<!-- NOTE - COVERT TO TABLE? -->
+Ed: for people with background like yours You can use the cramping tool.
+Ed leads Molly to his workstation and involves his father in the process.
 
-    Ed: for people with background like yours You can use the cramping tool.
-    Ed leads Molly to his workstation and involves his father in the process.
-    ...
-    Mark: In Piskel. You can crop it to the sprite  - cause it take that area too. (gestures – draws a large square with hands – then gestures to the edges). You approach an enemy if you’re close to it, it’ll trigger it.
-    Molly: ‘cause, sometimes you think how am I just sitting on this ledge here?
-    Mark: And you’re floating?
-    Molly: Yeah. Yeah that’s what’s happening. So..
-    Mark: So you can put your sprite back in again and you can crop it down.
 
-<!-- Mark: Show what? What are we doing?
-Ed: On this one it’s like this.
-Molly: Oh that’s good how did you do that?
-Ed: The cramping tool. (laughs nervously)
-Mark: The what?
-Ed: What… Is it cramping? (gestures with hands as scrunching / clutching motion)
-Mark: For doing what? What did we do? I don’t know what we’ve done.
-Ed: People have used the whole block.
-Mark: Oh yeah. We’ve just cropped it. So it’s got no border around it. So you don’t set things off when you get really close to them.
-Molly: Aaaah. I see yes. Cos the corners actually could have. (makes a small square gesture with fingers)
- -->
 
 #### Code Patching as a guided process
 
@@ -1021,56 +1009,23 @@ Code patching is a processes which is suggested by the UMC process, not explicit
 
 #### GDPs used to nurture tactical responses to coding errors
 
-This section highlights different possible errors and notes that responses are helped by the high level of context present in the use of GDP as a structural design framework.
+**Solving / Debuggging code problems that responses are helped by the high level of context present in the use of GDP as a structural design framework.**
 
-In analysis of journal notes and recorded screens I began to identify different kinds of coding problems that blocked participants from progressing.
 
 
 In critique of online tutorials researchers note  few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
 
-Professionals build up this sense through experience. While some practices are taught many others become ad-hoc rules of thumb that are difficult to communicate in abstract ways.
+In analysis of journal notes and recorded screens I began to identify different kinds of coding problems that blocked participants from progressing: syntax errors, no behaviour bugs and glitches. These are explored in Appendix.tech.2.
 
-More research would be welcome on how to help learners pick up these understandings.
-Further analysis of the different kinds of errors that are likely to arrive and testing different strategies for dealing with them that take into account the zone or proximal development of the participants may provide not only useful input for the participants, but also opportunities to check understandings of processes and game patterns and computational patterns in use.
+As an illustrative example we can look at glitch errors which don't crash the game instead creating an unintended effect. Not fully understanding every line of code can create a fun, unpredictable environment.
 
-For example,  on into the detail and types or errors.  These include:
+Orienting coding around GDPs highlights the desired impact on the game which may help affect towards solving bugs. The appendix examples suggest that wrong behaviour may be easier to investigate and to correct than no-behaviour errors. Aspects of the design, supporting resources and suggested practices  encourage this kinds of error. Certainly the process of code patching does.
 
-  -   **Syntax and Program Errors** are errors in your code which stop the game from functioning at all, often resulting in a blank screen.
-  -   **No Behaviour Bugs** are errors which in your code which don't stop the game from functioning but your intended effect is not present when it should be.
-  -   **Glitches** don't stop your game from running but as you play you see that there is an unintended effect. The game does something different from what we want it to do.
+Thus, mirroring the proposition of UMC and more specifically half baked games theory, in that a incomplete / templated game are motivates initial participation, glitch bugs which move game into a broken  state in regards the targed GDP may have a similar or even  potential for motivation. EXPLAIN?
 
 
-NOTE - Perhaps explore glitch examples.
-
-Not fully understanding every line of code can create a fun, unpredictable environment. We can infer from these examples that wrong behaviour may be easier to investigate and to correct than no-behaviour errors. Aspects of the design encourage this kinds of error. Certainly the process of code patching does.
-
-In a similar way that the initial provisions of a broken games are valuable to engage initial participation, the becoming of a broken GDP state, has similar potential. EXPLAIN?
-
-This area show potential but is under explored. However, just surfacing the issue feels valid in terms of useful stream of facilitator practice to explore.
 
 
-<!-- #### Examples of Glitch types of errors
-Short examples of different types and the affect implications.
-Glitch errors can be productive.
-**Productive in exploring code / creating new game opportunites**
-An interesting one where the x / y axis mix up for Te 2019-03-18 leads to a new challenge in the game.
-
-**Productive in in**
-- Glitch - 2019-05-08 - Te and Da  - create moving enemy but it totally leaves the screen. This caused amusement and participants knew how they thought they would follow that up.
-
- The game making style of some participants -- for the most part young people -- seemed particularly likely to induce glitches and their unintended effects in game play. As a facilitator I began to celebrate these glitches with participants and explore with them the opportunities they provided to understand the related code in a way that was often concrete, engaging and and playful. -->
-
-#### Concluding remarks on debugging and revision
-
-Many participants spent significant periods of time improving, testing and fixing coding errors in their games. Analysis of the coding of video data showed that revision and debugging was often a solo effort. In a way that mirrors the spread of other creative technical processes, certain revision and debugging practices that were transmitted through interaction with the facilitator that were adopted and used by the community. Some practices were straight-forward, for example the swift navigation between the source code window and a preview window of the live game. Others were more specialist like the use of the developer console of the internet browser to debug JavaScript errors or the process of hovering over red dots in the code playground to explore error messages.
-
-<!-- PERHAPS PULL UP DETAILS OF DEBUGGING. -->
-
-The experience of debugging appears to be a particular practice evoking certain feelings. Feelings of frustration alternate with elation at solving a tricky bug. As I built proficiency as a facilitator I began to identify different kinds of errors. The use of code patching often provoked glitch bugs which where actually behaviour did not match intended behaviour. In analysis of interactions with participants when trying to solve coding blockages, I note different strategies in responding to such errors. For some participants I quickly solve them with short explanation to allow them to continue. For other participants who I judge to be receptive I may celebrate the glitch and explore with them the opportunities they provided to understand the related code in a way that allowed the exploration of more abstract concepts using a concrete example afforded by the mechanics of the game design pattern. The following section provides an example of this kind of interaction and examines the surfacing of computational thinking concepts in particular.
-
-<!-- While the use of debugging tools and processes are often introduced to solve a particular problem in implementing one GDP. The same process is uses to solve issues that crop up while implementing other patterns. Throughout the recordings, some individuals show an evolution of problem solving knowledge and processes in relation to coding through their independent work.
-CAN i FIND ANY KEY EXAMPLES OF THIS?
--->
 
 
 
