--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -945,14 +945,22 @@ Once the code for the new game mechanic has been added, the child is guided to t
 
 <!-- tool use, technical processes and specialist language -->
 
-The emergence, use and propagation of new technical processes motivated by a drive to implement or complete a GDP often happen informally between peers.
-
-The processes are not static but are modified by the community as they are adopted and passed on. Some processes are introduced in a basic form through scaffolded activities like those provoked by the quick start cards. For some groups, they were introduced explicitly as a parent explains, facilitates or guides a process or at times technical processes are passed on informally in more casual help interactions as illustrated in the previous example.
+EDIT DOWN ALREADY COVERED IN CHAP 5?
+The emergence, use and propagation of new technical processes motivated by a drive to implement or complete a GDP often happen informally between peers. The processes are not static but are modified by the community as they are adopted and passed on. Some processes are introduced in a basic form through scaffolded activities like those provoked by the quick start cards. For some groups, they were introduced explicitly as a parent explains, facilitates or guides a process or at times technical processes are passed on informally in more casual help interactions as illustrated in the previous example.
 
 
 <!-- Taking a more focused view of the activity here would be implementing a game design pattern - e.g. adding keys and doors pattern in this case. On the level of action, creating a graphical asset of a key and adding this to the level design. The operation would be the exporting the graphical asset as a suitable file format from graphical design tool and uploading it to the code authoring tool. -->
 
 #### Use of GDPs to facilitate use of tools
+
+IS THIS ADDRESSED ABOVE - A tautology IN TERMS OF USE OF GDP LANGUAGE AS IT IS PRESENTED IN TOOLS.
+As with the section above on navigation, to avoid overreach when describing the possible utility of GDPs, it is important to remember that GDPs as a provided tool can be expected to be use. Thus these observations should bear this in mind.   
+
+
+Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
+
+Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs.
+
 
 In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. Nadine appears reluctant to help at first and when she does she is mostly non-verbal and makes changes quickly in a way that her mother cannot initially follow or replicate. The process of explaining this to her parent would be more time consuming. There may also be a power dynamic happening as well with the child enjoying showing proficiency without sharing the process perhaps as a performative
 demonstration agency or growing status within this community.
@@ -961,21 +969,17 @@ THERE IS CROSS OVER HERE WITH CHAPTER 4 - ACTION TO OPERATION - WHAT DOES THIS A
 
 We can see that the process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nadine has operationalised the process and it becomes part of the toolset of practices that she can draw on [CITE]. Molly also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process.
 
-#### Diverse use of technical processes driven by GDPs
 
-IS THIS ADDRESSED ABOVE - A tautology IN TERMS OF USE OF GDP LANGUAGE AS IT IS PRESENTED IN TOOLS.
-In describing this research it is important to avoid overreach when describing the possible utility of GDPs by making a distinction between primary and secondary involvement of GDPS in technical processes.
 
-Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
 
-Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs.
+<!-- by making a distinction between primary and secondary involvement of GDPS in technical processes. -->
 
 
 References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions.
 
 #### Increasing technical fluidity of general computer use
 
-Not just related to GDPS but perhaps motivated by them. 
+Not just related to GDPS but perhaps motivated by them.
 
 eexamples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
 
@@ -1022,12 +1026,6 @@ As an illustrative example we can look at glitch errors which don't crash the ga
 Orienting coding around GDPs highlights the desired impact on the game which may help affect towards solving bugs. The appendix examples suggest that wrong behaviour may be easier to investigate and to correct than no-behaviour errors. Aspects of the design, supporting resources and suggested practices  encourage this kinds of error. Certainly the process of code patching does.
 
 Thus, mirroring the proposition of UMC and more specifically half baked games theory, in that a incomplete / templated game are motivates initial participation, glitch bugs which move game into a broken  state in regards the targed GDP may have a similar or even  potential for motivation. EXPLAIN?
-
-
-
-
-
-
 
 
 ## The role of GDPs in the personal appropriation of concepts and processes
