--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -859,6 +859,13 @@ The parent outlines her strategies used to address lack of reading ability as a 
 Analysis of video data uncovered flexible way in which the participant divided the process of game making. While these processes were emergent in that they were not in by the facilitator, they show traces of home collaboration practices. For example, Suzanna and Olivia alternated between use of keyboard and mouse to give the child hands on experience when possible. In interview data the parent note "I resist the urge to fix things immediately when she struggles." The parent driving seat to overcome code blockages then allowed the child to input their design choices when more complicated work is complete.
 
 
+<!-- Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture.  -->
+
+While in P2 when supported by grandparents Toby had worked mostly alone, in P3, he works as a pair with his father (Dan) in a  more guided practice. In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern. Dan's experience as a software engineer and volunteer at Coder Dojo (Glossary), in an interview extract he outlines being present to focus on facilitating learners to develop independently.
+
+    I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do. Even if it's then taken me five minutes to explain what a semicolon is. And point. _It's that key_. Because it was just, I could do it so effortlessly. I think I'm sure I put people off very quickly by "Dan did something really quickly. I don't know what it was.".
+
+
 ### Discussion on division of labour in the video data
 
 
@@ -898,13 +905,7 @@ Molly: Oh X. Alright Bubs. Thanks. -->
 
 
 
-Toby and Dan's pair process of accessing professional documentation also illustrated an aspect of their family learning culture. The pair's process is more guided and focused than many other participants. In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
 
-This approach appears to be influenced by Dan's experience as a software engineer and volunteer at Coder Dojo (Glossary). Interview extracts (included as appendices) show a direction to support the novices direction as a facilitator where possible.
-
-    I try never to touch the keyboard of who's there. If they are stuck on something I always tell them what to do. Even if it's then taken me five minutes to explain what a semicolon is. And point. It's that key. Because it was just, I could do it so effortlessly. I think I'm sure I put people off very quickly by "Dave did something really quickly. I don't know what it was.".
-
-This extract from interview data indicates a priority to support the learner to develop independently but to still be very present in the support process.
 
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
