on technical practices

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -835,7 +835,10 @@ In Vignette 5.b.3, Molly, the mother wants to export an image from the graphical
 
 In Vignette 5.b.3, the child takes on the role of guiding her mother to export graphics from Piskel gallery to the hard drive as a downloaded image file before them importing it to he code project and updating the relevant lines of code. The mother demonstrates her increased level of understanding and participation on overall process after being playfully challenged by daughter about her use of technical language. "Do you even know what export means?". Emerging laguage is used blending both technical terms like _export_ with more folk terms _getting it in the game_ rather than importing.  
 
+Nadine appears reluctant to help at first and when she does she is mostly non-verbal and makes changes quickly in a way that her mother cannot initially follow or replicate. The process of explaining this to her parent would be more time consuming. There may also be a power dynamic happening as well with the child enjoying showing proficiency without sharing the process perhaps as a performative
+demonstration agency or growing status within this community.
 
+<!-- In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. -->
 
 LINK TO THE TECHNICAL SECTION.
 
@@ -944,78 +947,66 @@ Once the code for the new game mechanic has been added, the child is guided to t
 ### The role of GDP used in emerging technical processes
 
 <!-- tool use, technical processes and specialist language -->
+<!-- EDIT DOWN ALREADY COVERED IN CHAP 5? -->
 
-EDIT DOWN ALREADY COVERED IN CHAP 5?
-The emergence, use and propagation of new technical processes motivated by a drive to implement or complete a GDP often happen informally between peers. The processes are not static but are modified by the community as they are adopted and passed on. Some processes are introduced in a basic form through scaffolded activities like those provoked by the quick start cards. For some groups, they were introduced explicitly as a parent explains, facilitates or guides a process or at times technical processes are passed on informally in more casual help interactions as illustrated in the previous example.
+Turning from the division of labour to how GDPs interact with the development of use of technical processes in game making. Example of technical processes can be found in exporting graphical files in Appendix.Molly, in _code patching_ (see glossary for terms in italics) in Appendix 1. Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. Even introduced processes evolved, being modified by the community.
+
+Thus while use and propagation of new technical processes were often motivated by a drive to implement or complete a GDPs, the following observations bear in mind that the relationship between GDPs and emergent technical processes is complex and interdependent rather than assuming that GDPs directly facilitate emerging tool use.
+
+The following paragraphs address x, y and z
+
+<!-- For some groups, they were introduced explicitly as a parent explains, facilitates or guides a process or at times technical processes are passed on informally in more casual help interactions as illustrated in the previous example.
+ IS THIS ADDRESSED ABOVE - A tautology IN TERMS OF USE OF GDP LANGUAGE AS IT IS PRESENTED IN TOOLS. -to avoid overreach when describing the possible utility of GDPs, -->
 
 
 <!-- Taking a more focused view of the activity here would be implementing a game design pattern - e.g. adding keys and doors pattern in this case. On the level of action, creating a graphical asset of a key and adding this to the level design. The operation would be the exporting the graphical asset as a suitable file format from graphical design tool and uploading it to the code authoring tool. -->
 
-#### Use of GDPs to facilitate use of tools
+**Increasing technical fluidity of general computer use and software tools**
 
-IS THIS ADDRESSED ABOVE - A tautology IN TERMS OF USE OF GDP LANGUAGE AS IT IS PRESENTED IN TOOLS.
-As with the section above on navigation, to avoid overreach when describing the possible utility of GDPs, it is important to remember that GDPs as a provided tool can be expected to be use. Thus these observations should bear this in mind.   
+<!-- Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract). -->
 
-
-Some examples contain processes that are linked to the language and the concepts and player experience of GDPs, for example the use of GDP language of hazards and rewards (see extract).
-
-Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs.
-
-
-In this interaction above which was used to illustrate Molly and Nadine's division of labour, the parent is focused on completing the action of creating a graphical asset of a hazard as part of the activity of adding the GDP of including a hazard into the game. Nadine appears reluctant to help at first and when she does she is mostly non-verbal and makes changes quickly in a way that her mother cannot initially follow or replicate. The process of explaining this to her parent would be more time consuming. There may also be a power dynamic happening as well with the child enjoying showing proficiency without sharing the process perhaps as a performative
-demonstration agency or growing status within this community.
-
-THERE IS CROSS OVER HERE WITH CHAPTER 4 - ACTION TO OPERATION - WHAT DOES THIS ADD? HOW TO COMPRESS IT?
-
-We can see that the process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nadine has operationalised the process and it becomes part of the toolset of practices that she can draw on [CITE]. Molly also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process.
-
-
-
-
+<!-- Other examples are more secondary where the emerging processes and adoption of language concern more to do with more general digital design,  which are needed due to the process of implementing game features - which are in this case structured via GDPs. -->
 <!-- by making a distinction between primary and secondary involvement of GDPS in technical processes. -->
-
-
-References to such emerging practices driven by GDPs were present in many exchanges during directed playtesting and pair interactions.
-
-#### Increasing technical fluidity of general computer use
-
-Not just related to GDPS but perhaps motivated by them.
-
-eexamples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
-
-
 <!-- Thus while the concepts of GDPs are some times useful to explain a technical concepts directly, especially where direct / immediate feedback involving concrete example of experience are relevant, at times the process in more indirect. -->
 
-After giving feedback on the jump speed Molly's game Ed sharing a process to redundant space at the edges of design sprite characters.
+
+The motivational factor for participants of seeing their GDP-related change in the game drove many to overcome and to become fluid in certain technical processes.  
+
+Examples of processes being adopted by participants through the implementation of GDPs including the fluidity of navigation between playing and coding window shown by all younger participants and many adults and the development of keyboard and mouse coordination to facilitate navigation within the code environment and external support resources to facilitate the code patching process.
+
+**GDPs encouraging sharing of technical practices**
+
+In Vignette 5.a, we can see that the process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nadine has operationalised the process and it becomes part of the toolset of practices that she can draw on [CITE]. Molly also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process.
+
+References to such emerging technical practices were present in many exchanges during informal playtesting and pair interactions. In the following example a reference to a GDP is used to explain the need for the technical process.  
+
+In Vignette 5.e, after giving feedback on the jump speed Molly's game Ed sharing a process to redundant space at the edges of design sprite characters.
 
 <!-- NOTE - In vignette 4.a.5 -->
 
-Ed: for people with background like yours You can use the cramping tool.
-Ed leads Molly to his workstation and involves his father in the process.
+    "Ed: for people with background like yours You can use the cramping tool."
 
+Ed leads Molly to his workstation and involves his father Mark in the process. Mark uses an example of a GDP in his explaination of why to undertake that process, to not "set things off when you are close to them"
 
+Thus rather than GDPs helping the graphical cropping process, it provokes Ed to notice and suggest it to Molly, and Mark to evoke it as a reason to undertake cropping.  
 
-#### Code Patching as a guided process
+**Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors**
 
-While the process of copying and pasting fixes into on-going projects is not technically equivalent to modern software patching processes, it contains many appropriate conotations. A patch is a quick fix to repair or to add new features to already existing code, supplied  to avoid a complete rewrite or more extensive process, and designed to easy for the end user to apply via a guided process. I also like the real world connotations of craft and physical repair of materials in a relatable way.  
+Code patching, the process of copying and pasting fixes into on-going projects, is outlined in Appendix.codepatching. The process of code patching is similar in that the documentation is structured around GDPS, and thus similar aspects of an appropriate organising unit apply.
 
-During this process of careful documentation I became concerned that over facilitation in this instructional way would remove the possibility for errors and thus reduce the opportunities for learning from resolving failure. However, while each stage of the process of adding game pattern was documented in as complete a fashion as possible, in practice mistakes were still made and additional customisations were made. Thus while the process did reduce dependency on my input as a facilitator there were still opportunities for me to support and resolve coding errors in person.
+Code patching is a processes which suits being organised around GDPs aligns with the UMC process.
 
+The patches, and patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made.
 
-Code patching is a processes which is suggested by the UMC process, not explicitly perhaps, but it is a logical adaptations. This is an under explored area in research and the use of code patching raises some interesting questions.  
+The video data which addresses the errors that the technical process brings up opens some interesting lines of questioning which are beyond the full remit of this research but are included as promising areas.  
 
 - Question - do more useful / less de-motivating errors result from remixing and game patching?
 - Question - what impact does the process of being driven by GDPs have on how users deal with errors?
-- For example does the closely paired code structure and game output help with motivation?
-- How do you develop a more granular sense of the kinds of blocks, errors and how to overcome them.
+  - For example does the closely paired code structure and game output help with motivation?
+  - How do you develop a more granular sense of the kinds of blocks, errors and how to overcome them.
 
-
-
-#### GDPs used to nurture tactical responses to coding errors
 
 **Solving / Debuggging code problems that responses are helped by the high level of context present in the use of GDP as a structural design framework.**
-
-
 
 In critique of online tutorials researchers note  few provide common errors[@kim_pedagogical_2017]. This lack of problem solving techniques communicated in online tutorials may addressed through use of GDPs.
 
